2021-05-07  Alex Christensen  <achristensen@webkit.org>

        Allow libwebrtc to build for Mac Catalyst
        https://bugs.webkit.org/show_bug.cgi?id=225505

        Reviewed by Youenn Fablet.

        This is progress towards rdar://77568774

        Changes necessary to get it to build and link were:
        1. kCVPixelBufferOpenGLESCompatibilityKey is unavailable on Catalyst, so use kCVPixelBufferOpenGLCompatibilityKey like we do on macOS.
        2. SSE4 and AVX seem to be unavailable in the Catalyst SDK like they are in the iOS simulator SDK, so disable them similarly.
        3. Link to UIKit and CoreGraphics in debug builds like we do with iOS family builds.
        4. Don't use @loader_path/../../../ for DYLIB_INSTALL_NAME_BASE like we do with relocatable Safari builds, similar to an ANGLE change I made in r276318
        5. Export the same symbols as iOS for now.  This may need some tweaking when I get it to link with WebCore, but that's why this is only progress.

        * Configurations/DebugRelease.xcconfig:
        * Configurations/SDKVariant.xcconfig:
        * Configurations/libvpx.xcconfig:
        * Configurations/libwebrtc.xcconfig:
        * Configurations/opus.xcconfig:
        * Source/third_party/libvpx/source/config/mac/x64/vp8_rtcd.h:
        * Source/third_party/libvpx/source/config/mac/x64/vp9_rtcd.h:
        * Source/third_party/libvpx/source/config/mac/x64/vpx_dsp_rtcd.h:
        * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH264.mm:
        (-[RTCVideoDecoderH264 resetDecompressionSession]):
        * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderH265.mm:
        (-[RTCVideoDecoderH265 resetDecompressionSession]):
        * Source/webrtc/sdk/objc/components/video_codec/RTCVideoDecoderVTBVP9.mm:
        (-[RTCVideoDecoderVTBVP9 resetDecompressionSession]):
        * Source/webrtc/sdk/objc/components/video_codec/RTCVideoEncoderH264.mm: